--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@testing-library/user-event": "^12.7.3",
         "axios": "^0.21.1",
         "leaflet": "^1.7.1",
+        "leaflet-ant-path": "^1.3.0",
         "leaflet-routing-machine": "^3.2.12",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
